--- a/_posts/2018-08-08-test-page.md
+++ b/_posts/2018-08-08-test-page.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 current: page
-cover: assets/images/bus.jpg
+cover:
 navigation: True
 title: Test Post
 date: 1492-09-12 10:18:00
